--- a/templates/test.html
+++ b/templates/test.html
@@ -4,6 +4,7 @@
 
     <body>
         <h1>This is a Header</h1>
-        <p>paragraph</p>
+        <p>first paragraph</p>
+        <p>second paragraph</p>
     </body>
 </html>
